syntax = "proto3";

package enreach.registry;

import "amino/amino.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "enreach/registry/params.proto";
import "enreach/registry/region.proto";

option go_package = "enreach/x/registry/types";

// Msg defines the Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;
  
  // UpdateParams defines a (governance) operation for updating the module
  // parameters. The authority defaults to the x/gov module account.
  rpc UpdateParams (MsgUpdateParams) returns (MsgUpdateParamsResponse);
  rpc CreateRegion (MsgCreateRegion) returns (MsgCreateRegionResponse);
  rpc UpdateRegion (MsgUpdateRegion) returns (MsgUpdateRegionResponse);
  rpc DeleteRegion (MsgDeleteRegion) returns (MsgDeleteRegionResponse);
}
// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) =                          "authority";
  option           (amino.name) = "enreach/x/registry/MsgUpdateParams";
  
  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  
  // params defines the module parameters to update.
  
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
message MsgUpdateParamsResponse {}

message MsgCreateRegion {
  option (cosmos.msg.v1.signer) = "signer";
  string signer      = 1;
  string code        = 2;
  string name        = 3;
  string description = 4;
}

message MsgCreateRegionResponse {
}

message MsgUpdateRegion {
  option (cosmos.msg.v1.signer) = "signer";
  string signer      = 1;
  string code        = 2;
  string name        = 3;
  string description = 4;
}

message MsgUpdateRegionResponse {}

message MsgDeleteRegion {
  option (cosmos.msg.v1.signer) = "signer";
  string signer      = 1;
  string code        = 2;
}

message MsgDeleteRegionResponse {}

